[package]
name = "rstq"
version = "0.1.0"
edition = "2024"

[dependencies]
ordhash = { git = "https://github.com/pantonov/ordhash.git" }
tokio = { version="1", features=["rt", "time", "sync"]}

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

# Logging
#tracing = "0.1"
#tracing-subscriber = { version = "0.3", features = ["env-filter"] }
